salvia_macro/tests/query_ui/fail/no_inputs.rs
use salvia::query;

#[query]
async fn f() {}

fn main() {}
