salvia_macro/tests/query_ui/fail/no_inputs.stderr
error: #[query]: function should accept &::salvia::QueryContext as its last parameter
 --> $DIR/no_inputs.rs:4:11
  |
4 | async fn f() {}
  |           ^^
